#2690 add text for downloading file with a redirect (without header "Content-Disposition")
Currently, it fails for HTTPGET method.